syntax = "proto3";

package mapreduce;

service Coordinator {
  rpc RegisterWorker(WorkerRegistration) returns (WorkerResponse);
  rpc GetTask(WorkerRequest) returns (Task);
  rpc SubmitJob(JobRequest) returns (JobResponse);
  rpc ListJobs(Empty) returns (JobList);
  rpc SystemStatus(Empty) returns (Status);
}

message WorkerRegistration {
  string address = 1;
}

message WorkerResponse {
  bool success = 1;
  string message = 2;
}

message WorkerRequest {}

message Task {
  string input = 1;
  string workload = 2;
  string output = 3;
  string args = 4;
}

message JobRequest {
  string input = 1;
  string workload = 2;
  string output = 3;
  string args = 4;
}

message JobResponse {
  bool success = 1;
  string message = 2;
}

message Empty {}

message JobList {
  repeated Task jobs = 1;
}

message Status {
  int32 worker_count = 1;
  repeated Worker workers = 2;
  repeated Task jobs = 3;
}

message Worker {
  string address = 1;
  string state = 2;
}
